--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "@tanstack/router-devtools": "^1.112.18",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.41.0",
     "lucide-react": "^0.479.0",
     "motion": "^12.4.10",
     "next-themes": "^0.4.4",
+    "pg": "^8.14.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "redaxios": "^0.5.1",
@@ -34,11 +37,14 @@
     "@tailwindcss/postcss": "^4.0.12",
     "@tailwindcss/vite": "^4.0.12",
     "@types/node": "^22.5.4",
+    "@types/pg": "^8.11.11",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "autoprefixer": "^10.4.20",
+    "drizzle-kit": "^0.30.6",
     "postcss": "^8.5.1",
     "tailwindcss": "^4.0.12",
+    "tsx": "^4.19.3",
     "typescript": "^5.7.2",
     "vite-tsconfig-paths": "^5.1.4"
   }
